@@ -1,6 +1,4 @@
 package com._pi.benepick.domain.penaltyHists.service;
-
-
 import com._pi.benepick.domain.members.entity.Members;
 import com._pi.benepick.domain.members.repository.MembersRepository;
 import com._pi.benepick.domain.penaltyHists.dto.PenaltyResponse.*;
@@ -14,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.data.domain.Page;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,7 +37,7 @@ public class PenaltyHistsQueryServiceImpl implements PenaltyHistsQueryService
                         .createdAt(p.getCreatedAt())
                         .content(p.getContent())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
        return PenaltyListResponseDTO.builder()
                .penaltyResponseDTOList(result)
